fix thanks for attanding page form spacing

--- a/wp-content/themes/delivering-happiness/assets/sass/pages/_service-request.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/pages/_service-request.scss
@@ -139,6 +139,7 @@
 						@include size(auto, auto);
 						background: none;
 						text-align: center;
+						margin-bottom: 23px;
 					}
 				}	
 			}
